@@ -8,20 +8,20 @@ _syx_gtk_main (void)
    gtk_main ();
 }
 
-SYX_FUNC_PRIMITIVE(syx_gtk_window_new)
+SYX_FUNC_PRIMITIVE(GtkWindow_new)
 {
   syx_pointer w = (syx_pointer)gtk_window_new (0);
   SYX_PRIM_RETURN((SyxOop)w);
 }
 
-SYX_FUNC_PRIMITIVE(syx_gtk_widget_show_all)
+SYX_FUNC_PRIMITIVE(GtkWidget_showAll)
 {
   syx_pointer w = SYX_OOP_CAST_POINTER(SYX_OBJECT_DATA(es->message_receiver)[0]);
   gtk_widget_show_all(w);
   SYX_PRIM_RETURN(es->message_receiver);
 }
 
-SYX_FUNC_PRIMITIVE(syx_gtk_main)
+SYX_FUNC_PRIMITIVE(Gtk_main)
 {
   if (!_syx_gtk_main_thread)
     _syx_gtk_main_thread = g_thread_create_full (_syx_gtk_main, NULL, 0, FALSE, FALSE,
@@ -30,7 +30,7 @@ SYX_FUNC_PRIMITIVE(syx_gtk_main)
   SYX_PRIM_RETURN(es->message_receiver);
 }
 
-SYX_FUNC_PRIMITIVE(syx_gtk_main_quit)
+SYX_FUNC_PRIMITIVE(Gtk_mainQuit)
 {
   if (_syx_gtk_main_thread)
     {
