@@ -33,8 +33,6 @@ int main()
       syx_scheduler_add_process (process);
     }
 
-  syx_plugin_load ("gtk");
-
   syx_scheduler_run ();
 
   syx_quit ();
